Add template style, fix base template

--- a/todo/todo_manager/todo/templates/list.html
+++ b/todo/todo_manager/todo/templates/list.html
@@ -1,7 +1,4 @@
- <!DOCTYPE html>
-<html>
-  <body>
+{% block content %}
     <h1>list</h1>
     <p>list element</p>
-  </body>
-</html>
+{% endblock %}
