--- a/todo/todo_manager/todo/templates/todo.html
+++ b/todo/todo_manager/todo/templates/todo.html
@@ -1,7 +1,4 @@
- <!DOCTYPE html>
-<html>
-  <body>
+{% block content %}
     <h1>todo</h1>
     <p>todo list</p>
-  </body>
-</html>
+{% endblock %}
