Add view to create todos update detail view

--- a/todo/todo_manager/todo/templates/detail.html
+++ b/todo/todo_manager/todo/templates/detail.html
@@ -1,9 +1,9 @@
 {% block content %}
     <h1>detail</h1>
     <p>todo here we need a form</p>
-    <form id="todo_create" action="" method="post">
+    <div>
       <div>
-      {{ form.shorttext }}
+        {{ form.shorttext }}
       </div>
     </div>
     <div>
@@ -21,7 +21,6 @@
       <div>
         {{ form.list_items }}
       </div>
-      <button type="submit" class="btn btn-primary">Speichern</button>
-    </form>
+    </div>
 {% endblock %}
 
