--- a/todo/todo_manager/todo/templates/base_generic.html
+++ b/todo/todo_manager/todo/templates/base_generic.html
@@ -1,8 +1,18 @@
 {% load static %}
 
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <title>todo manager</title>
+
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'bootstrap/bootstrap-datetimepicker.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'bootstrap/datepicker-widget.css' %}" type="text/css">
+  </head>
   <body>
-  {% block content %}{% endblock %}
+  {% block content %}
+  {% endblock %}
   </body>
 </html>
