Add some bootstrap elements to base html template

--- a/todo/todo_manager/todo/templates/base_generic.html
+++ b/todo/todo_manager/todo/templates/base_generic.html
@@ -12,6 +12,35 @@
     <link rel="stylesheet" href="{% static 'bootstrap_datepicker_plus/css/datepicker-widget.css' %}" type="text/css">
   </head>
   <body>
+    <div class="container-fluid border-bottom shadow-sm p-3 px-md-4 mb-3 fixed-top bg-white">
+      <div class="row">
+        <div class="d-lg-none col-3 ml-1 pt-2 justify-content-left bg-white my-auto">
+          <h3>ToDos</h3>
+        </div>
+        <div class="d-none d-lg-block pt-2 col-4 bg-white my-auto">
+          <h2>ToDo Management</h2>
+        </div>
+        <div class="col bg-white pl-0 my-auto">
+          <ul class="nav nav-pills nav-fill">
+            <li class="nav-item">
+              <a class="nav-link {% block current_active %} {% endblock %}" href="{% url 'main' %}">
+                current
+              </a>
+            </li>
+          <li class="nav-item">
+            <a class="nav-link {% block create_active %} {% endblock %}" href="{% url 'create' %}">
+              create
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% block list_active %} {% endblock %}" href="{% url 'list' %}">
+              search
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   {% block content %}
   {% endblock %}
 
