Add static files

--- a/todo/todo_manager/todo/templates/base_generic.html
+++ b/todo/todo_manager/todo/templates/base_generic.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <title>todo manager</title>
-
+    {% load static %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'bootstrap_datetimepicker/css/bootstrap-datetimepicker.css' %}" type="text/css">
